# p2024-dashboard

./: .gitignore  LICENSE  pyproject.toml
primary2024_dashboard/: __init__.py  db_connect.py  logger.py  main.py  result_models.py  result_scraper.py  texas_results_urls.toml
primary2024_dashboard/api/: api.env  api_db.py  api_users.py  main.py
primary2024_dashboard/api/models/: full_result_model.py
primary2024_dashboard/dashboard/: funcs.py  main_page.py
primary2024_dashboard/dashboard/pages/: 1_early_vote_report.py
primary2024_dashboard/process/: __init__.py
primary2024_dashboard/process/earlyvote/: __init__.py  earlyvoter_model.py  earlyvoter_validation.py  ev_crosstabs.py  ev_datashape_funcs.py  ev_definitions.py  ev_main.py  ev_process.py  ev_validator.py  sos_intake_validator.py
primary2024_dashboard/process/electionnight/: __init__.py  election_result_db.py  election_result_models.py  election_result_scraper.py  election_result_validators.py  en_main.py  en_process.py  result_models.py  result_scraper.py  result_validators.py
primary2024_dashboard/utils/: __init__.py  csv_reader.py  csv_writer.py  results_scraper.py  toml_reader.py  validation_funcs.py
