[tool.poetry]
name = "primary2024-dashboard"
version = "0.1.0"
description = ""
authors = ["John R. Eakin <johnreakin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.31.1"
snowflake-snowpark-python = "^1.12.1"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.2"
pydantic = "^2.6.1"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.26"
psycopg2 = "^2.9.9"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.0"
urllib3 = "^2.2.0"
js2py = "^0.74"
cfscrape = {path = "/Users/johneakin/cloudflare-scrape"}
nameparser = "^1.1.3"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
